<resources>
    <string name="app_name">EvoGym</string>
    <string name="first_word">EVO</string>
    <string name="second_word">GYM</string>
    <string name="welcome">Bienvenido</string>
    <string name="selection">Inicia sesion o registrate</string>
    <string name="login">Inicia sesion</string>
    <string name="singIn">Registrate</string>
    <string name="Registrarse">Registrarse</string>
    <string name="email">Email:</string>
    <string name="pasword">Contraseña:</string>
    <string name="password_repetition">Repite la contraseña:</string>
    <string name="ejemplo_correo">usuario@gmail.com</string>
    <string name="restricciones_contraseña">*************</string>
    <string name="forgot_password">¿Has olvidado la contraseña?</string>
    <string name="Nombre">Nombre completo:</string>
    <string name="Nombre_ejemplo">Lucas Perez:</string>
    <string name="Username">Nombre de usuario:</string>
    <string name="Edad">Edad:</string>
    <string name="Edad_ejemplo">18</string>
    <string name="Peso">Peso en Kg:</string>
    <string name="Peso_ejemplo">80</string>
    <string name="Bienvenida">¡Bienvenido Usuario!</string>
    <string name="EntrenamientoSemanal">Mis entrenamientos semanales</string>
    <string name="EntrenamientoDiario">Mi entrenamiento de hoy</string>
    <string name="RegistroDeBloque">Registra tu bloque de entrenamiento</string>


    <!--Texto del navigationView-->
    <string name="InicioNV">Inicio</string>
    <string name="CalendarioNV">Calendario</string>
    <string name="ProgresoNV">Progreso</string>
    <string name="PerfilNV">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Dias de la semana -->
    <string name="Lunes">Lunes</string>
    <string name="Martes">Martes</string>
    <string name="Miercoles">Miercoles</string>
    <string name="Jueves">Jueves</string>
    <string name="Viernes">Viernes</string>
    <string name="Sabado">Sabado</string>
    <string name="Domingo">Domingo</string>

    <!--Entrenamientos -->
    <string name="DiaDePierna">Pierna</string>
    <string name="DiaDePecho">Pecho y hombros</string>
    <string name="DiaDeEspalda">Espalda</string>
    <string name="DiaDeFullBody">FullBody</string>
    <string name="DiaDeDescanso">Dia de descanso</string>


    <!--Descripciones -->
    <string name="logoApp">Logo de la app</string>

</resources>