<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".Login">
    <!-- En esta fragment creamos la pantalla de inicio de sesion -->
    <!-- Añadimos logo de app -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/logoApp"
                android:id="@+id/iV_iconSingUp"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/splash_screen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!--Creamos un LinnerLayout para ordenar las palabras del nombre de una manera vertical-->
            <LinearLayout
                android:id="@+id/lLpresentacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="110dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/iV_iconSingUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <!-- El orden lo pondriamos con el orientation -->

                <!-- Añadimos los dos textos -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/caacupeone_regular"
                    android:text="@string/first_word"
                    android:textColor="@color/white"
                    android:textSize="60sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/caacupeone_regular"
                    android:text="@string/second_word"
                    android:textColor="@color/green"
                    android:textSize="60sp" />
            </LinearLayout>

            <!-- Se crea un materialCard para agrupar todos los elementos importantes del
            inicio de sesion para darle un estilo visual mejorado-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mCInicioSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/soft_green"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@id/lLpresentacion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- Encapsulamos todo en un LinnerLayout para tenerlo todo ordenador-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="13dp">

                    <!--Añadimos texto principal-->
                    <TextView
                        android:id="@+id/tVInicioSesion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingBottom="15dp"
                        android:text="@string/login"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <!--Recogemos el email del usuario-->
                    <TextView
                        android:id="@+id/tVEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/email"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/eTEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/ejemplo_correo"
                        android:inputType="textEmailAddress"
                        android:autofillHints="emailAddress"/> <!--Con esta linea conseguimos que se solicite siempre un email-->

                    <!--Recogemos la constraseña del usuario-->
                    <TextView
                        android:id="@+id/tVContraseña"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:fontFamily="@font/poppins_semibold"
                        android:paddingTop="15dp"
                        android:text="@string/pasword"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/eTContraseña"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/restricciones_contraseña"
                        android:inputType="textPassword"
                        android:autofillHints="password"/> <!-- Con esta linea conseguimos buscar un formato contraseña-->

                    <!-- Añadimos un boton con el cual se revisara sin la informacion dada es valida y se pueda iniciar sesion-->


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mBIniciarSesion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/green"
                        android:text="@string/login" />

                    <!-- Añadimos un texto que tendra funcion de boton con el cual se podra ir a otro registro
                     por si te olvidaste de la contraseña-->
                    <TextView
                        android:id="@+id/tVContraseñaOlvidada"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/forgot_password"
                        android:textColor="@color/green"
                        android:textSize="11sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>