<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Registro">
    <!--En este fragment creamos la pantalla de inicio de sesion o de registro de la app
    de la cual despues con dos botones colgara la pantalla de iniciar sesion o de registrarse-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Añadimos el logo de la app en una parte superior y en grande-->
            <ImageView
                android:contentDescription="@string/logoApp"
                android:id="@+id/iV_iconSingUp"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/splash_screen"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <!--Creamos un LinnerLayout para ordenar las palabras del nombre de una manera vertical-->
            <LinearLayout
                android:id="@+id/lLNombreApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="110dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/iV_iconSingUp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <!-- El orden lo pondriamos con el orientation -->

                <!-- Añadimos los dos textos -->
                <TextView
                    android:id="@+id/tVInicioFirstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/caacupeone_regular"
                    android:text="@string/first_word"
                    android:textColor="@color/white"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/tVInicioSecondWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/caacupeone_regular"
                    android:text="@string/second_word"
                    android:textColor="@color/green"
                    android:textSize="60sp" />
            </LinearLayout>

            <!-- Creamos otro LinnerLayout con el cual ordenaremos el texto y los botones -->
            <LinearLayout
                android:id="@+id/lLTextos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/lLNombreApp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- Añadimos ambos textos siempre sin hardcodearlos -->
                <TextView
                    android:id="@+id/tVInicioBienvenido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/tVOpciones"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:paddingBottom="15dp"
                    android:text="@string/selection"
                    android:textColor="@color/white_off"
                    android:textSize="20sp" />

                <!-- Creamos un boton con un materia button para darle un estilo mas personalizado -->
                <!-- Añadimos un icono a la izquierda de cada boton -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnInicioSesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingVertical="14dp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:cornerRadius="24dp"
                    app:icon="@drawable/login"
                    app:iconGravity="textStart"
                    app:iconPadding="14dp"
                    app:iconSize="30dp"
                    app:iconTint="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/grey"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingVertical="14dp"
                    android:text="@string/singIn"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:cornerRadius="24dp"
                    app:icon="@drawable/singin"
                    app:iconGravity="textStart"
                    app:iconPadding="14dp"
                    app:iconSize="30dp"
                    app:iconTint="@color/white" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>